fixed issue with nav focus on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,6 +490,10 @@ section {
     font-size: 20px;
   }
 
+  header nav ul li a:focus {
+    background-color: none;
+  }
+
   footer h2, footer div {
     text-align: center;
     width: 100%;
